[package]
name = "backpack_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.29.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.167", features = ["derive"]}
reqwest = {version = "0.11.18", features = ["json"]}